--- a/src/components/components.css
+++ b/src/components/components.css
@@ -131,3 +131,84 @@
   border-top: 1px solid black;
   font-weight: bold;
 }
+
+
+
+
+
+/* Login */
+#Login {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff3d;
+  backdrop-filter: blur(5px);
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+#Login h3 {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 1.5rem;
+}
+
+#Login form {
+  width: 20rem;
+  background-color: #008737;
+  border: 1px solid #008737;
+  padding: 2rem;
+  border-radius: 1rem;
+  position: relative;
+}
+
+#Login input {
+  display: block;
+  width: 100%;
+  margin-bottom: 1rem;
+  background-color: #ffffff;
+  padding: .7rem 1.5rem;
+  border: 2px solid #ffffff;
+  color: #008737;
+  font-weight: bold;
+  font-size: .8rem;
+  border-radius: 5rem;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+#Login input:focus {
+  outline: none;
+  border: 2px solid gray;
+}
+
+#Login input::placeholder {
+  color: gray;
+  font-weight: bold;
+}
+
+#Login button {
+  display: block;
+  margin: 5rem auto 0 auto;
+  background-color: #ffffff;
+  color: #008737;
+  font-family: 'Josefin Sans', sans-serif;
+  padding: .8rem 2.5rem;
+  border-radius: 5rem;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+#Login .form-close {
+  position: absolute;
+  top: 7%;
+  right: 7%;
+  width: 1.2rem;
+  cursor: pointer;
+}
