--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,24 @@
   font-family: 'Josefin Sans', sans-serif;
   margin-bottom: 5rem;
 }
+
+.add-market-btn {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  background-color: #008737;
+  width: 3.1rem;
+  height: 3.2rem;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid #ffffff;
+}
+
+.add-market-btn img {
+  width: 2rem;
+  display: block;
+  margin: auto;
+}
