--- a/src/components/components.css
+++ b/src/components/components.css
@@ -69,6 +69,11 @@
   font-weight: bold;
 }
 
+.search-container input:focus {
+  outline: none;
+  border: 2px solid gray;
+}
+
 .search-container input::placeholder {
   color: #008737;
 }
@@ -109,23 +114,53 @@
 
 #MarketCard {
   margin: 2.5rem 0;
-  border: 2px solid black;
   padding: 1rem;
-  border-radius: 1rem;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  border-radius: 1.5rem;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
   font-family: 'Josefin Sans', sans-serif;
+  background-color: #f5f5f5;
+  overflow: hidden;
 }
 
 .images-container {
-  width: 120rem;
+  grid-column: 1 / 2;
+  width: 15rem;
   height: 15rem;
   border-radius: 1rem;
-  background-color: #F5FAF5;
-  /* border: 1px solid red; */
+  background-color: #d8d8d8;
   margin-right: 1rem;
 }
+
+.market-details {
+  grid-column: 2 / 5;
+}
+
+.market-details h1 {
+  margin-bottom: 1rem;
+  padding-top: .5rem;
+  color: #008737;
+}
+
+.market-details p {
+  margin-bottom: 1rem;
+  color: #2c2c2c;
+  font-size: 1.1rem;
+  line-height: 1.1;
+}
+
+.market-details h2 {
+  margin-bottom: .7rem;
+  font-size: 1rem;
+  color: #008737;
+}
+
+.market-details img {
+  width: 1rem;
+  margin-right: .5rem;
+}
+
+
 
 
 
