--- a/src/components/components.css
+++ b/src/components/components.css
@@ -127,6 +127,27 @@
   font-family: 'Josefin Sans', sans-serif;
   background-color: #f5f5f5;
   overflow: hidden;
+  position: relative;
+}
+
+.admin-btns {
+  position: absolute;
+  top: 5%;
+  right: 2%;
+}
+
+.admin-btns i {
+  margin-left: 1rem;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.admin-btns .fa-trash {
+  color: rgb(255, 67, 34);
+}
+
+.admin-btns .fa-pencil-alt {
+  color: #0091b6;
 }
 
 .images {
