fixed market card edit button  UX issue

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -60,32 +60,33 @@
 .search-container input {
   margin-right: .5rem;
   margin-bottom: .5rem;
-  border: 2px solid #008737;
+  border: 2px solid #808080;
   padding: .5rem 1.5rem;
   background-color: #ffffff;
   border-radius: .5rem;
   width: 20rem;
   font-family: 'Josefin Sans', sans-serif;
-  color: #008737;
+  color: #000000;
   font-weight: bold;
 }
 
 .search-container input:focus {
   outline: none;
-  border: 2px solid gray;
+  /* border: 2px solid #008737; */
+  border: 2px solid #000000;
 }
 
 .search-container input::placeholder {
-  color: gray;
+  color: #808080;
 }
 
 .search-container button {
-  background-color: #008737;
+  background-color: #808080;
   border: none;
   padding: .5rem 1rem;
   margin-right: .2rem;
   font-family: 'Josefin Sans', sans-serif;
-  border-radius: 1rem;
+  border-radius: .4rem;
   cursor: pointer;
   color: #F5FAF5;
   font-size: .9rem;
@@ -93,7 +94,7 @@
 }
 
 .search-container button:hover {
-  background-color: #808080;
+  background-color: #008737;
 }
 
 .nav-buttons {
@@ -122,6 +123,8 @@
   margin: 2.5rem 0;
   padding: 1rem;
   border-radius: 1.5rem;
+  border-top-left-radius: 8rem;
+  border-bottom-left-radius: 8rem;
   display: grid;
   grid-template-columns: 1fr 3fr;
   font-family: 'Josefin Sans', sans-serif;
@@ -136,25 +139,33 @@
   right: 2%;
 }
 
+.admin-btns p {
+  display: inline-block;
+  margin-right: .5rem;
+  text-decoration: underline;
+  font-size: .8rem;
+  opacity: 0.5;
+}
+
 .admin-btns i {
   margin-left: 1rem;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   cursor: pointer;
 }
 
 .admin-btns .fa-trash {
-  color: rgb(255, 67, 34);
+  color: #000000;
 }
 
 .admin-btns .fa-pencil-alt {
-  color: #0091b6;
+  color: #000000;
 }
 
 .images {
   grid-column: 1 / 2;
   width: 15rem;
   height: 15rem;
-  border-radius: 1rem;
+  border-radius: 50%;
   background-color: #d8d8d8;
   margin-right: 1rem;
   overflow: hidden;
@@ -163,6 +174,16 @@
 
 .images-container {
   position: relative;
+}
+
+.shade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  background: linear-gradient(90deg, #0000006e, transparent);
 }
 
 .images-container img {
