--- a/src/skeletons/skeletons.css
+++ b/src/skeletons/skeletons.css
@@ -12,7 +12,7 @@
   height: 15rem;
   width: 15rem;
   background-color: #d8d8d8;
-  border-radius: 1rem;
+  border-radius: 50%;
 }
 
 .skeleton .text {
@@ -49,6 +49,8 @@
   background-color: #f5f5f5;
   margin: 2.5rem 0;
   border-radius: 1.5rem;
+  border-top-left-radius: 8rem;
+  border-bottom-left-radius: 8rem;
   position: relative;
   overflow: hidden;
 }
